--- a/index.css
+++ b/index.css
@@ -148,6 +148,7 @@ body{
    text-align: center;
    background-position: center center;
    margin-bottom: 52px;
+   cursor: pointer;
 }
 
 .fields__submit button{
